--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -305,8 +305,57 @@ figure.action {
 	padding-top: 50px;
 }
 
+/* 404 Page */
 
+.error-page {
+	background: url("img/clue_2.jpg") no-repeat scroll right top / cover rgba(0, 0, 0, 0);	
+}
+	
+.error {
+	display: flex;
+	justify-content: center;
+	min-height: 600px;
+	width: 88%;
+}
 
+.error-content {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-direction: column;
+	min-height: 600px;
+	width: 78%;
+}
 
+.error-content h4 {
+	font-size: 2.5em;
+	font-family: 'Montserrat';
+	font-weight: 700;
+	width: 78%;
+	align-self: flex-end;
+}
 
+.error-content  h2 {
+	font-family: 'Open Sans';
+	font-weight: 600;
+	font-size: 1.875em;
+	width: 60%;
+	line-height: 1.3;
+	margin: 0;
+	padding-bottom: 75px;
+}
+
+.error-content h3 {
+	font-family: 'Open Sans';
+	font-size: 1.5em;
+	width: 18%;
+	padding-top: 60px;
+	align-self: flex-end;
+}
+
+.error-content a {
+	align-self: flex-end;
+}
+	
+	
 
