--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -125,6 +125,41 @@ li.individual-featured-work h3 {
 	font-size: 1.5625em;
 }
 
+/* Twitter */
+
+h3.custom-widget-title {
+    color: #a6a6a6;
+    text-transform: uppercase;
+    margin: 2em 0 .5em;
+    font-family: 'Montserrat';
+	font-size: .9375em;
+	padding-top: 19px;
+}
+
+h3.widget-title {
+	font-size: 1.5em;
+	line-height: 1;
+}
+
+.ctf-tweet-content {
+	width: 70%;
+}
+
+#ctf p.ctf-tweet-text {
+	line-height: 1.6;
+}
+
+#ctf .ctf-item {
+	padding-left: 0;
+}
+
+.follow-us-link {
+	font-family: 'Montserrat';
+	font-weight: 700;
+	color: #45ac9d;
+	text-transform: uppercase;	
+}
+
  /* Archive Case Studies */
 
  .case-study {
@@ -336,8 +371,8 @@ figure.action {
 }
 
 .error-content  h2 {
-	font-family: 'Open Sans';
-	font-weight: 600;
+	font-family: 'Londrina Solid',cursive;
+	font-weight: 400;
 	font-size: 1.875em;
 	width: 60%;
 	line-height: 1.3;
@@ -346,8 +381,9 @@ figure.action {
 }
 
 .error-content h3 {
-	font-family: 'Open Sans';
+	font-family: 'Londrina Solid' ,cursive;
 	font-size: 1.5em;
+	font-weight: lighter;
 	width: 18%;
 	padding-top: 60px;
 	align-self: flex-end;
